Switches build to JRE 11